crates/shipper-git/src/snapshots/shipper_git__edge_case_snapshots__clean_result_err_not_git.snap
---
source: crates/shipper-git/src/lib.rs
expression: result
---
Err(
    "git status failed: fatal: not a git repository",
)
