crates/shipper-git/src/snapshots/shipper_git__edge_case_snapshots__clean_result_err_uncommitted.snap
---
source: crates/shipper-git/src/lib.rs
expression: result
---
Err(
    "git working tree has uncommitted changes. Use --allow-dirty to bypass.",
)
