crates/shipper-git/src/snapshots/shipper_git__edge_case_snapshots__context_dirty_detached.snap
---
source: crates/shipper-git/src/lib.rs
expression: ctx
---
GitContext {
    commit: Some(
        "ff00ff00ff00ff00ff00ff00ff00ff00ff00ff00",
    ),
    branch: None,
    tag: None,
    dirty: Some(
        true,
    ),
}
