crates/shipper-git/src/snapshots/shipper_git__edge_case_snapshots__context_feature_branch_clean.snap
---
source: crates/shipper-git/src/lib.rs
expression: ctx
---
GitContext {
    commit: Some(
        "aabbccddaabbccddaabbccddaabbccddaabbccdd",
    ),
    branch: Some(
        "feature/add-logging",
    ),
    tag: None,
    dirty: Some(
        false,
    ),
}
