crates/shipper-git/src/snapshots/shipper_git__edge_case_snapshots__context_no_commit_no_branch.snap
---
source: crates/shipper-git/src/lib.rs
expression: ctx
---
GitContext {
    commit: None,
    branch: None,
    tag: None,
    dirty: None,
}
