crates/shipper-git/src/snapshots/shipper_git__edge_case_snapshots__porcelain_parsed_files.snap
---
source: crates/shipper-git/src/lib.rs
expression: files
---
[
    "untracked.txt",
    "odified.txt",
    "staged_new.txt",
    "deleted.txt",
    "both_staged_and_modified.txt",
    "renamed.txt -> new_name.txt",
]
