crates/shipper-git/src/snapshots/shipper_git__edge_case_snapshots__porcelain_renamed_and_copied.snap
---
source: crates/shipper-git/src/lib.rs
expression: files
---
[
    "old.txt -> new.txt",
    "original.txt -> copy.txt",
    "brand_new.txt",
]
