crates/shipper-git/src/snapshots/shipper_git__edge_case_snapshots__short_commit_exactly_eight.snap
---
source: crates/shipper-git/src/lib.rs
expression: ctx.short_commit()
---
Some(
    "abcdefg",
)
